# pixeleditor

./: .gitignore  Makefile.am  configure.ac  meson.build
data/: .gitignore  Makefile.am  app-menu.ui  gears-menu.ui  gears-menu.xml  resources.gresource.xml
src/: Makefile.am  debug.h  main.c
src/lib/: .gitignore  Makefile.am
src/ui/: .gitignore  Makefile.am  mainheader.c  mainheader.h  mainwindow.c  mainwindow.h  statusbar.c  statusbar.h  uiabout.c  uiabout.h
