# vim: set noet ts=8 sw=8 sts=8:

# Disable dependency tracking, that fails sometimes for obscure reasons
AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = src data

AM_CPPFLAGS = \
	      -I$(top_srcdir)/data \
	      -I$(top_builddir)/data \
	      -I$(top_builddir)/src \
	      -I$(top_srcdir)/src \
	      -I$(top_srcdir)/src/ui \
	      -I$(top_srcdir)/src/lib


